refatory appSettings structure and implemented new method for update file

--- a/Data/AppSettings.json
+++ b/Data/AppSettings.json
@@ -1,20 +1,23 @@
-{
-  "redis": [
-    {
-      "key": "ConnectionString",
-      "value": "true"
-    }
-  ],
-  "logs": [
-    {
-      "key": "CreateLog",
-      "value": "true"
-    }
-  ],
-  "ms": [
-    {
-      "key": "Run",
-      "value": "true"
-    }
-  ]
-}
+[
+  {
+    "group": "Teste",
+    "keys": [
+      {
+        "key": "AAA",
+        "value": "BBB"
+      },
+      {
+        "key": "CCC",
+        "value": "B"
+      },
+      {
+        "key": "CCC",
+        "value": "D"
+      },
+      {
+        "key": "CCC",
+        "value": "E"
+      }
+    ]
+  }
+]
