rename database to data branch

--- a/config.csproj
+++ b/config.csproj
@@ -25,6 +25,16 @@
 		  <AutoGen>True</AutoGen>
 		  <DependentUpon>ConnectionStringsMsg.resx</DependentUpon>
 		</Compile>
+		<Compile Update="Utils\Messages\Documentation\DescriptionMsg.Designer.cs">
+		  <DesignTime>True</DesignTime>
+		  <AutoGen>True</AutoGen>
+		  <DependentUpon>DescriptionMsg.resx</DependentUpon>
+		</Compile>
+		<Compile Update="Utils\Messages\Documentation\DocumentationMsg.Designer.cs">
+		  <DesignTime>True</DesignTime>
+		  <AutoGen>True</AutoGen>
+		  <DependentUpon>DocumentationMsg.resx</DependentUpon>
+		</Compile>
 		<Compile Update="Utils\Messages\StringsFormatedMsg.Designer.cs">
 		  <DesignTime>True</DesignTime>
 		  <AutoGen>True</AutoGen>
@@ -46,6 +56,14 @@
 		<EmbeddedResource Update="Utils\Messages\ConnectionStringsMsg.resx">
 		  <Generator>ResXFileCodeGenerator</Generator>
 		  <LastGenOutput>ConnectionStringsMsg.Designer.cs</LastGenOutput>
+		</EmbeddedResource>
+		<EmbeddedResource Update="Utils\Messages\Documentation\DescriptionMsg.resx">
+		  <Generator>ResXFileCodeGenerator</Generator>
+		  <LastGenOutput>DescriptionMsg.Designer.cs</LastGenOutput>
+		</EmbeddedResource>
+		<EmbeddedResource Update="Utils\Messages\Documentation\DocumentationMsg.resx">
+		  <Generator>ResXFileCodeGenerator</Generator>
+		  <LastGenOutput>DocumentationMsg.Designer.cs</LastGenOutput>
 		</EmbeddedResource>
 		<EmbeddedResource Update="Utils\Messages\StringsFormatedMsg.resx">
 		  <Generator>ResXFileCodeGenerator</Generator>
